# fotc

./: .gitignore  .mailmap  CHANGES.txt  Common.DefinitionsATP.html  Common.DefinitionsI.html  Common.FOL.FOL-Eq.html  Common.FOL.FOL.html  Common.FOL.Relation.Binary.EqReasoning.html  Common.FOL.Relation.Binary.PropositionalEquality.html  Common.Relation.Binary.PreorderReasoning.html  Common.Relation.Unary.html  DistributiveLaws.Base.html  DistributiveLaws.Lemma3-ATP.html  DistributiveLaws.Lemma4-ATP.html  DistributiveLaws.Lemma5-ATP.html  DistributiveLaws.Lemma6-ATP.html  DistributiveLaws.PropertiesI.html  DistributiveLaws.README.html  DistributiveLaws.TaskB-AllStepsATP.html  DistributiveLaws.TaskB-HalvedStepsATP.html  DistributiveLaws.TaskB-I.html  DistributiveLaws.TaskB-TopDownATP.html  DistributiveLaws.TaskB.UnprovedATP.html  FOL.Base.html  FOL.NonEmptyDomain.TheoremsATP.html  FOL.NonEmptyDomain.TheoremsI.html  FOL.NonIntuitionistic.TheoremsATP.html  FOL.NonIntuitionistic.TheoremsI.html  FOL.Propositional.TheoremsATP.html  FOL.Propositional.TheoremsI.html  FOL.README.html  FOL.SchemataATP.html  FOL.TheoremsATP.html  FOL.TheoremsI.html  FOTC.Base.List.PropertiesATP.html  FOTC.Base.List.PropertiesI.html  FOTC.Base.List.html  FOTC.Base.Loop.html  FOTC.Base.PropertiesATP.html  FOTC.Base.PropertiesI.html  (+258 more)
Bugs/: BadErase.agda  GeneralHints.agda  LocalPragmas.agda
Bugs/GeneralHints/: OtherModule.agda
Bugs/LocalPragmas/: OtherModule.agda
Draft/: ComparingEqReasoning.agda  DataBase.agda  DataPostulate.agda  IJP.agda  IdentityType.agda  LambdaLifting.agda  Makefile  Postulates.agda  RenderToHTML.agda  Setoid.agda  WellFoundedInductionI.agda
Draft/Accesibility/: WellFoundedInduction.agda
Draft/Accessibility/: WellFoundedInduction.agda
Draft/Agda/: Regression.agda
Draft/AgdaLight/: Makefile
Draft/Agsy/: AddTotality.agda  AgsyTest.agda  AxiomaticPA.agda  DistributiveLaws.agda  GroupTheory.agda  GroupTheoryER.agda
Draft/Berry/: Berry.agda  Berry.hs
Draft/Bisimilarity/: BisimilarityPostFixedPoint.agda  BisimilarityPostulates.agda  BisimilarityProperties.agda
Draft/Bisimulation/: HigherOrder.agda
Draft/Bugs/: BadErrorMessage.agda  BadErrorMessage1.agda  GeneralHints.agda  N0.agda
Draft/DistributiveLaws/: Makefile  TaskB-ATP.agda
Draft/FO-LTC-PCF/: Base.agda  Everything.agda  Loop.agda  README.agda
Draft/FOL/: SchemataATP.agda
Draft/FixedPoints/: Functors.agda  Functors.hs  LeastFixedPoints.agda  PolynomialFunctors.agda  Predicates.agda
Draft/Groupoids/: Base.agda  Properties.agda  PropertiesER.agda
Draft/Issues/: Agda365.agda
Draft/LTC-PCF/: Y.agda
Draft/List/: LT-LengthSL.agda
Draft/MapIterate/: MapIterate.agda
Draft/McCarthy91/: Arithmetic.agda  ArithmeticATP.agda  Everything.agda  InequalitiesATP.agda  MCR.agda  McCarthy91.agda  Numbers.agda  PropertiesATP.agda  README.txt  RelationATP.agda  TODO.org  TerminationCheckIssue.agda  WellFoundedInduction.agda  WellFoundedInductionATP.agda  WellFoundedInductionMCR.v
Draft/Mirror/: Everything.agda  Mirror.agda  MirrorSL.agda  MirrorStdLib.agda  PropertiesATP.agda  PropertiesI.agda  README.txt  StructurallySmaller.agda  StructurallySmaller.v  StructurallySmallerSL.agda
Draft/Nat/: Induction.agda
Draft/PA/: Base.agda  Impossible.agda  Properties.agda  Type.agda
Draft/PredicateLogic/: SchemasATP.agda  SchemataATP.agda
Draft/Setoids/: FOTC.agda  Leibniz.agda  LeibnizEquality.agda  LeibnizEquality.v
Draft/Stream/: Postulates.agda
Draft/Test/: Succeed.hs  agda2atp.cabal
Draft/old/: Aczel-FOTC.agda  EqReasoning.agda  LTC.agda  Pure.agda
Draft/paper-2011/: T.agda
Draft/papers/: SEFM-2011.agda
Examples/: Division.agda  DivisionPCF.agda  GCD-ER.agda  GCD-PCF-ER.agda  GCD-PCF.agda  GCD-Rec.agda  GCD-RecER.agda  GCD.agda
Examples/Division/: IsDIV.agda  (+17 more)
Issues/: Agda365.agda  BadErase.agda  BadProofTermErasure.agda  Definition.agda  Eta.agda  Eta1.agda  Eta2.agda  Lazyness.agda  LocalPragmas.agda  ProofTerm.agda  ProofTerm1.agda  ProofTerm4.agda
LTC/: Everything.agda  EverythingER.agda  Makefile  Minimal.agda  Minimal.ax  MinimalER.agda  test-conjectures.bash  test-conjecturesPCF.bash
LTC-PCF/: Everything.agda  Makefile
Lib/: Function.agda
MyStdLib/: Function.agda
Others/: FixedPoints.agda
TODO/: Records.agda  TODO.org
Test/: Add.agda  Factorial.agda  Hints.agda  ImplicitArguments.agda  LambdaLifting.agda  Makefile  Names.agda  RemoveQuantificationOverProofs.agda  Where.agda  conjectures.bash  consistency.bash  test-axioms.bash  test-conjectures.bash  test-conjecturesPCF.bash
agda2atp/: LICENSE  agda2atp.cabal
examples/: Makefile  README.agda
issues/: Agda365-1.agda  Agda365-2.agda  Definition.agda  LocalPragmas.agda
mk/: config.mk
notes/: ABP.hs  ComparingEqReasoning.agda  DataBase.agda  DataPostulate.agda  Existential.agda  ExistentialSyntax.agda  GroupTheoryFormalizations.agda  IJP.agda  IdentityType.agda  InstanceArguments.agda  InternalSyntax.agda  K.agda  LambdaLifting.agda  MendelsonAxioms.agda  No-Universe-Polymorphism.agda  Norm.agda  Ordinals.agda  Parameters.agda  ProofTerm.agda  README.md  RenderToHTML.agda  StructurallySmaller.agda  TODO.org  Without-K.agda  comments.txt  no-name.txt  notes.org  paper.org  released-atp.txt  use.org
others/: Factorial.agda  FixedPoints.agda
src/: ATP.hs  Common.hs  Main.hs  Monad.hs  Names.hs  Options.hs  Postulates.agda  Reports.hs  Snapshot.hs  Utils.hs  Version.hs  undefined.h
src/peano/: LICENSE  peano.cabal
src/peano/src/Data/: Peano.hs
src/peano/test/: Num.hs  Tests.hs
test/: Add.agda  Logic.agda  LogicalConstants.agda
utils/: non-conjectures.bash  tptp2waldmeister.bash
utils/dump-agdai/: Makefile  dump-agdai.cabal
utils/dump-agdai/src/: Main.hs  ReadInterface.hs  Types.hs
utils/dump-agdai/test/: Imports.agda  NoImports.agda  SortedOutput.agda
utils/fix-whitespace/: FixWhitespace.hs  fix-whitespace.cabal
utils/read-agda-interface/: Main.hs  Makefile  ReadAgdaInterface.hs  read-agda-interface.cabal
utils/read-agda-interface/src/: Main.hs  Types.hs
utils/read-agda-interface/test/: NoImports.agda
(+3745 files in other folders)
