name:               agda2atp
version:            2.2.11.1
build-type:         Simple
cabal-version:      >= 1.8 && < 2
author:             Ana Bove, Peter Dybjer, and Andrés Sicard-Ramírez
license:            MIT
license-file:       LICENSE
maintainer:         Andrés Sicard-Ramírez <andres.sicard.ramirez@gmail.com>
category:           Dependent types
synopsis:           Program for prove first-order formulae written in Agda using ATPs
description:
  This package provides a program for proving first order
  formulae written in the dependently typed language Agda
  <http://wiki.portal.chalmers.se/agda/pmwiki.php> using (first-order)
  automatic theorem provers (ATPs), via the translation of the Agda
  formulae to the TPTP format which is a standard for input and output
  for the ATPs <http://www.cs.miami.edu/~tptp/>.
tested-with:        GHC == 6.12.3, GHC == 7.2.1
extra-source-files: src/undefined.h

source-repository head
  type:     darcs
  location: http://patch-tag.com/r/asr/agda2atp

executable agda2atp
  main-is:        Main.hs
  hs-source-dirs: src

  build-depends:  Agda         == 2.2.11.1
                  , base       >= 4.2     && < 4.5
                  , Diff       >= 0.1.2   && < 0.2
                  , containers >= 0.3     && < 0.5
                  , directory  >= 1.0     && < 1.2
                  , filepath   >= 1.1     && < 1.3
                  , mtl        == 2.0.*
                  , process    >= 1.0     && < 1.2

  other-modules:  AgdaLib.EtaExpansion
                  AgdaLib.Interface
                  AgdaLib.Syntax.DeBruijn
                  ATP
                  FOL.Constants
                  FOL.Primitives
                  FOL.Translation.Common
                  FOL.Translation.Concrete.Name
                  FOL.Translation.Functions
                  FOL.Translation.Internal
                  FOL.Translation.Internal.Terms
                  FOL.Translation.Internal.Types
                  FOL.Types
                  Monad.Base
                  Monad.Reports
                  Options
                  Paths_agda2atp
                  Snapshot
                  TPTP.Files
                  TPTP.Pretty
                  TPTP.Translation
                  TPTP.Types
                  Utils.Directory
                  Utils.List
                  Utils.Monad
                  Utils.Names
                  Utils.Show
                  Utils.Version

  -- Required by cabal haddock. Cabal bug?
  -- cabal-install version 0.10.2 using version 1.10.2.0 of the Cabal library
  extensions:     CPP

  if impl(ghc >= 6.12) && impl(ghc < 7)
     ghc-options: -Wall
                  -fwarn-incomplete-record-updates
                  -fwarn-monomorphism-restriction
                  -fwarn-simple-patterns
                  -fwarn-tabs
                  -fwarn-unused-do-bind
                  -Werror

  if impl(ghc >= 7.2.1)
     ghc-options: -Wall
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -- This warning is disabled due to the GHC bug #4489
                  -- which is fixed for GHC 7.4.1.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -fwarn-unused-do-bind
                  -fwarn-unrecognised-pragmas
                  -- The Paths_agda2atp module, which is generated
                  -- automatically by Cabal, gives rise to a warning
                  -- under GHC 7.2.1 (at least when Cabal 1.10.2.0 is
                  -- used), so we disable that warning.
                  -fno-warn-warnings-deprecations
                  -Werror

    -- From Agda.cabal:
    -- If someone installs Agda with the setuid bit set, then the
    -- presence of +RTS may be a security problem (see GHC bug #3910).
    -- However, we sometimes recommend people to use +RTS to control
    -- Agda's memory usage, so we want this functionality enabled by
    -- default.
    ghc-options: -rtsopts

  ghc-prof-options: -auto-all
