name:               agda2atp
version:            0.9.1
build-type:         Simple
cabal-version:      >= 1.8
author:             Andrés Sicard-Ramírez
license:            MIT
license-file:       LICENSE
maintainer:         Andrés Sicard-Ramírez <andres.sicard.ramirez@gmail.com>
category:           Dependent types
synopsis:           Program for prove first-order formulae written in Agda using ATPs
tested-with:        GHC == 7.4.1
description:
  This package provides a program for proving first order
  formulae written in the dependently typed language Agda
  <http://wiki.portal.chalmers.se/agda/pmwiki.php> using (first-order)
  automatic theorem provers (ATPs), via the translation of the Agda
  formulae to the TPTP format which is a standard for input and output
  for the ATPs <http://www.cs.miami.edu/~tptp/>.
extra-source-files:
        CHANGES.txt
        README.txt
        src/undefined.h

source-repository head
  type:     darcs
  location: http://patch-tag.com/r/asr/agda2atp

executable agda2atp
  main-is:        Main.hs
  hs-source-dirs: src

  build-depends: Agda                   == 2.3.1.1
                 , base                 >= 4.2     && < 4.6
                 , Diff                 >= 0.1.2   && < 0.2
                 , containers           >= 0.3     && < 0.6
                 , directory            >= 1.0     && < 1.2
                 , filepath             >= 1.1     && < 1.4
                 , mtl                  >= 2.0     && < 2.2
                 , process              >= 1.0     && < 1.2
                 , unordered-containers == 0.2.*

  other-modules: AgdaLib.DeBruijn
                 AgdaLib.EtaExpansion
                 AgdaLib.Interface
                 ATP
                 FOL.Constants
                 FOL.Primitives
                 FOL.Translation.Common
                 FOL.Translation.Functions
                 FOL.Translation.Name
                 FOL.Translation.Internal
                 FOL.Translation.Terms
                 FOL.Translation.Types
                 FOL.Types
                 Monad.Base
                 Monad.Reports
                 Options
                 Paths_agda2atp
                 Snapshot
                 TPTP.Files
                 TPTP.Pretty
                 TPTP.Translation
                 TPTP.Types
                 Utils.Directory
                 Utils.List
                 Utils.Monad
                 Utils.Names
                 Utils.Show
                 Utils.Version

 -- Required by cabal haddock. Cabal bug?
 --
 -- cabal-install version 0.14.0 using version 1.14.0 of the Cabal
 -- library.
  extensions: CPP

  if impl(ghc == 6.12.3)
     -- Only warnings.
     ghc-options: -Wall
                  -fwarn-incomplete-record-updates
                  -fwarn-monomorphism-restriction
                  -fwarn-simple-patterns
                  -fwarn-tabs
                  -Werror

  if impl(ghc == 7.0.1) || impl(ghc == 7.0.2) || impl(ghc == 7.0.3) || impl(ghc == 7.0.4)
     -- Only warnings.
     ghc-options: -Wall
                  -- The Cabal-generated module Paths_Agda triggers a
                  -- warning under GHC 7.0.* (cabal-install version
                  -- 0.10.2 using version 1.10.2.0 of the Cabal
                  -- library), therefore we disable that warning.
                  -fno-warn-warnings-deprecations
                  -fwarn-incomplete-record-updates
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.0.* (cabal-install
                  -- version 0.10.2 using version 1.10.2.0 of the
                  -- Cabal library), therefore we disable this
                  -- warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror

  if impl(ghc == 7.2.1) || impl(ghc == 7.2.2)
     -- Only warnings.
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.2.* (cabal-install
                  -- version 0.10.4 using version 1.12.0 of the Cabal
                  -- library), therefore we disable this warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror

  if impl(ghc == 7.4.1)
     -- Only warnings.
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.4.1 (cabal-install
                  -- version 0.14.0 using version 1.14.0 of the Cabal
                  -- library), therefore we disable this warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror

  -- From Agda.cabal: If someone installs Agda with the setuid bit
  -- set, then the presence of +RTS may be a security problem (see GHC
  -- bug #3910).  However, we sometimes recommend people to use +RTS
  -- to control Agda's memory usage, so we want this functionality
  -- enabled by default.
  ghc-options: -rtsopts

  ghc-prof-options: -auto-all
