name:          agda2atp
version:       0.9.1
build-type:    Simple
cabal-version: >= 1.8
author:        Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Andrés Sicard-Ramírez <andres.sicard.ramirez@gmail.com>
category:      Dependent types
homepage:      https://github.com/asr/agda2atp.git
bug-reports:   https://github.com/asr/agda2atp/issues/
synopsis:      Program for proving first-order formulae written in Agda using ATPs
tested-with:   GHC == 7.4.2
description:
  This package provides a program for proving first order
  formulae written in the dependently typed language Agda
  <http://wiki.portal.chalmers.se/agda/pmwiki.php> using (first-order)
  automatic theorem provers (ATPs), via the translation of the Agda
  formulae to the TPTP format which is a standard for input and output
  for the ATPs <http://www.cs.miami.edu/~tptp/>.
extra-source-files:
        CHANGES.txt
        README.md
        src/undefined.h

source-repository head
  type:     git
  location: git://github.com/asr/agda2atp.git

executable agda2atp
  main-is:        Main.hs
  hs-source-dirs: src

  build-depends: Agda                   == 2.3.1.1
                 , base                 >= 4.2     && < 4.6
                 , Diff                 >= 0.1.2   && < 0.2
                 , directory            >= 1.0     && < 1.2
                 , filepath             >= 1.1     && < 1.4
                 , ghc-prim             >= 0.2     && < 0.3
                 , MissingH             >= 1.0     && < 1.2
                 , mtl                  >= 2.0     && < 2.2
                 , process              >= 1.0     && < 1.2
                 , unordered-containers >= 0.2     && < 0.3

  other-modules: AgdaInternal.DeBruijn
                 AgdaInternal.EtaExpansion
                 AgdaInternal.Interface
                 AgdaInternal.RemoveProofTerms
                 AgdaInternal.Vars
                 ATP
                 FOL.Constants
                 FOL.Primitives
                 FOL.Translation.ClauseBody
                 FOL.Translation.Functions
                 FOL.Translation.Name
                 FOL.Translation.Terms
                 FOL.Translation.Types
                 FOL.Types
                 Monad.Base
                 Monad.Environment
                 Monad.Reports
                 Options
                 Paths_agda2atp
                 Snapshot
                 TPTP.ConcreteSyntax
                 TPTP.Files
                 TPTP.Translation
                 TPTP.Types
                 Utils.Directory
                 Utils.IO
                 Utils.List
                 Utils.Names
                 Utils.Show
                 Utils.Version

 -- Required by cabal haddock. Cabal bug?
 --
 -- cabal-install version 0.14.0 using version 1.14.0 of the Cabal
 -- library.
  extensions: CPP

  -- Only warnings.
  if impl(ghc == 7.4.1) || impl(ghc == 7.4.2)
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.4.* (cabal-install
                  -- version 0.14.0 using version 1.14.0 of the Cabal
                  -- library), therefore we disable this warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror

  -- From Agda.cabal: If someone installs Agda with the setuid bit
  -- set, then the presence of +RTS may be a security problem (see GHC
  -- bug #3910).  However, we sometimes recommend people to use +RTS
  -- to control Agda's memory usage, so we want this functionality
  -- enabled by default.
  ghc-options: -rtsopts

  ghc-prof-options: -auto-all
