name:               agdaATP
version:            0.0.1
build-type:         Simple
cabal-version:      >= 1.2 && < 2
author:             Ana Bove, Peter Dybjer, and Andrés Sicard-Ramírez
maintainer:         Andrés Sicard-Ramírez <andres.sicard.ramirez@gmail.com>
tested-with:        GHC == 6.12.1
extra-source-files: src/undefined.h

executable agda-atp
  main-is:        Main.hs
  hs-source-dirs: src

  build-depends:  base == 4.2.*
                  , Agda == 5.0.0
                  , containers == 0.3.*
                  , mtl >= 1.1.0.2 && < 1.2
                  , directory >= 1.0.0.3 && < 1.1

  other-modules:  FOL.Constants
                  FOL.FOL2TPTP
                  FOL.Primitives
                  FOL.Translation
                  -- FOL.Substitution
                  FOL.Types
                  Monad
                  -- Names
                  Options
                  Reports
                  TPTP.Translation
                  TPTP.Types

  ghc-options: -Wall
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -fwarn-simple-patterns
               -fwarn-tabs
               -fwarn-unused-do-bind
               -- -Werror
