name:               agdaATP
version:            0.0.1
build-type:         Simple
cabal-version:      >= 1.2 && < 2
author:             Ana Bove, Peter Dybjer, and Andrés Sicard-Ramírez
maintainer:         Andrés Sicard-Ramírez <andres.sicard.ramirez@gmail.com>
tested-with:        GHC == 6.12.1
extra-source-files: src/undefined.h

executable agda-atp
  main-is:        Main.hs
  hs-source-dirs: src
  extensions:     CPP
                  ScopedTypeVariables

  build-depends:  base == 4.2.*
                  , Agda == 5.0.0
                  , containers == 0.3.*
                  , directory >= 1.0.0.3 && < 1.1
                  , filepath >= 1.1.0.3 && < 1.2
                  , transformers >= 0.2.0.0 && < 0.3
                  , utility-ht >= 0.0.5.1 && < 0.1

  other-modules:  Common.Types
                  FOL.Constants
                  FOL.Monad
                  FOL.Primitives
                  FOL.Translation
                  -- FOL.Substitution
                  FOL.Types
                  MyAgda.Interface
                  MyAgda.Syntax.Abstract.Name
                  Names
                  Options
                  Reports
                  TPTP.Files
                  TPTP.Monad
                  TPTP.Pretty
                  TPTP.Translation
                  TPTP.Types

  ghc-options: -Wall
               -fwarn-incomplete-record-updates
               -fwarn-monomorphism-restriction
               -fwarn-simple-patterns
               -fwarn-tabs
               -fwarn-unused-do-bind
               -- -Werror
