Test-Suite succeed
  type:           exitcode-stdio-1.0
  hs-source-dirs: src/Test
  main-is:        Succeed.hs
  build-depends:  base        >= 4.2     && < 4.6
                  , Cabal     >= 1.9.2   && < 1.15
                  , directory >= 1.0     && < 1.2
                  , filemanip >= 0.3.5.2 && < 0.4
                  , process   >= 1.0     && < 1.2
