name:          peano
version:       0.1
build-type:    Simple
cabal-version: >= 1.8
author:        Andrés Sicard-Ramírez
license:       MIT
license-file:  LICENSE
maintainer:    Andrés Sicard-Ramírez <asr@eafit.edu.co>
category:      Data
synopsis:      Peano natural numbers
tested-with:   GHC == 7.10.1
description:   Peano natural numbers and some instances.

library
  exposed-modules: Data.Peano
  hs-source-dirs: src

  build-depends:
    base         >= 4.5.0.0 && < 4.9
    , QuickCheck >= 2.8 && < 2.9

  if impl(ghc >= 7.6)
     ghc-options:
       -Wall
       -fwarn-auto-orphans
       -fwarn-identities
       -fwarn-incomplete-record-updates
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-import-lists
       -fwarn-missing-local-sigs
       -fwarn-monomorphism-restriction
       -fwarn-tabs
       -Werror

test-suite test1
  type:           detailed-0.9
  hs-source-dirs: test
  test-module:    Tests

  build-depends:
    base >= 4.5.0.0 && < 4.9
    , Cabal >= 1.18.1.5 && < 1.23
    , cabal-test-quickcheck >= 0.1.2 && < 0.2
    , peano >= 0.1 && < 0.2
    , QuickCheck >= 2.8 && < 2.9

  if impl(ghc >= 7.6)
     ghc-options:
       -Wall
       -fwarn-identities
       -fwarn-incomplete-record-updates
       -fwarn-incomplete-uni-patterns
       -fwarn-missing-import-lists
       -fwarn-missing-local-sigs
       -fwarn-monomorphism-restriction
       -fwarn-tabs
       -Werror

  -- The following flag generates warnings with GHC 7.10.1.
  if impl(ghc < 7.10)
     ghc-options: -fwarn-auto-orphans
