name:          dump-agdai
version:       0.1
build-type:    Simple
cabal-version: >= 1.10
tested-with:   GHC == 7.4.2
description:   Dump an Agda interface file to stdout.

executable dump-agdai
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs

  build-depends: Agda                   >= 2.2 && < 2.4
                 , directory            >= 1.0 && < 1.2
                 , haskell2010          >= 1.0 && < 1.2
                 , unordered-containers >= 0.2 && < 0.3

  other-modules: ReadInterface
                 Types

  -- Only warnings.
  if impl(ghc == 7.4.1) || impl(ghc == 7.4.2)
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror
