name:              read-agda-interface
version:           0.1
cabal-version:     >= 1.2 && < 2
build-type:        Simple
tested-with:       GHC == 7.4.2

executable read-agda-interface
  hs-source-dirs: src
  main-is:        Main.hs

  build-depends: Agda                   >= 2.2 && < 2.4
                 , base                 >= 4.2 && < 4.6
                 , containers           >= 0.4 && < 0.5
                 , directory            >= 1.0 && < 1.2
                 , unordered-containers >= 0.2 && < 0.3

  other-modules: ReadInterface
                 Types

  if impl(ghc == 6.12.3)
     -- Only warnings.
     ghc-options: -Wall
                  -fwarn-incomplete-record-updates
                  -fwarn-monomorphism-restriction
                  -fwarn-simple-patterns
                  -fwarn-tabs
                  -Werror

  if impl(ghc == 7.0.1) || impl(ghc == 7.0.2) || impl(ghc == 7.0.3) || impl(ghc == 7.0.4)
     -- Only warnings.
     ghc-options: -Wall
                  -- The Cabal-generated module Paths_Agda triggers a
                  -- warning under GHC 7.0.* (cabal-install version
                  -- 0.10.2 using version 1.10.2.0 of the Cabal
                  -- library), therefore we disable that warning.
                  -fno-warn-warnings-deprecations
                  -fwarn-incomplete-record-updates
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.0.* (cabal-install
                  -- version 0.10.2 using version 1.10.2.0 of the
                  -- Cabal library), therefore we disable this
                  -- warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror

  if impl(ghc == 7.2.1) || impl(ghc == 7.2.2)
     -- Only warnings.
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.2.* (cabal-install
                  -- version 0.10.4 using version 1.12.0 of the Cabal
                  -- library), therefore we disable this warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror

  if impl(ghc == 7.4.1) || impl(ghc == 7.4.2)
     -- Only warnings.
     ghc-options: -Wall
                  -fwarn-auto-orphans
                  -fwarn-identities
                  -fwarn-incomplete-record-updates
                  -fwarn-incomplete-uni-patterns
                  -- The Cabal-generated module Paths_agda2atp
                  -- triggers a warning under GHC 7.4.* (cabal-install
                  -- version 0.14.0 using version 1.14.0 of the Cabal
                  -- library), therefore we disable this warning.
                  -- -fwarn-missing-import-lists
                  -fwarn-missing-local-sigs
                  -fwarn-monomorphism-restriction
                  -fwarn-tabs
                  -Werror
